# zu

./: README.md  pyproject.toml
.github/workflows/: EVERY_DAY_UPDATE_INDEX.yml
src/zu/cli/: __enum__.py  __init__.py  kv.py  utils.py
src/zu/data/: indexes.json
